Add publish on tag workflow

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -25,6 +25,9 @@ concurrency:
 defaults:
   run:
     shell: bash
+env:
+  URL: "https://danil-grigorev.github.io/"
+  BASE_URL: "rancher-turtles-docs"
 
 jobs:
   build:
