--- a/.github/workflows/version-publish.yaml
+++ b/.github/workflows/version-publish.yaml
@@ -15,6 +15,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Prepare the env
+        run: |
+          raw=$(git branch -r --contains ${{ github.ref }})
+          branch=${raw/origin\/}
+          echo ::set-env name=BRANCH::$branch
+          echo ::set-env name=TAG::${TAG#v}
+      - name: Ensure main branch is the source
+        if: ${{ env.BRANCH }} != 'main'
+        uses: actions/github-script@v3
+        with:
+          script: |
+              core.setFailed('Tag was not created from main@HEAD')
       - name: Checkout
         uses: actions/checkout@v3
       - name: Install dependencies
