--- a/.github/workflows/version-publish.yaml
+++ b/.github/workflows/version-publish.yaml
@@ -3,7 +3,7 @@ name: Publish new docs version
 on:
   push:
     tags:
-    - '*' # Push events to matching v*, i.e. v1.0, v20.15.10
+    - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
 env:
   TAG: ${{ github.ref_name }}
@@ -19,6 +19,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Install dependencies
         run: yarn install --frozen-lockfile
+      - name: Prepare tag for publishing
+        run: echo "TAG=${TAG#v}" >> $GITHUB_ENV
       - name: Create a new version
         run: yarn docusaurus docs:version ${{ env.TAG }}
       - uses: EndBug/add-and-commit@v9
