Modify versioning workflow to open a PR with changes
Signed-off-by: Danil Grigorev <danil.grigorev@suse.com>

--- a/.github/workflows/version-publish.yaml
+++ b/.github/workflows/version-publish.yaml
@@ -27,8 +27,5 @@ jobs:
         with:
           message: 'Add docs version ${{ env.TAG }}'
           push: false
-      - name: Push changes
-        uses: ad-m/github-push-action@v0.6.0
-        with:
-          branch: main
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v5
